--- a/css/style.css
+++ b/css/style.css
@@ -88,12 +88,12 @@ input[type="range"]::-webkit-slider-thumb {
   width: 15%;
   height: 30px;
   border-radius: 50%;
-  border: 2px solid white;
+  border: 2px solid #ddd;
   cursor: pointer;
   transition: .3s ease-in-out;
 }​​
 
 input[type="range"]::-webkit-slider-thumb:hover {
-  background-color: white;
+  background-color: #ddd;
   border: 2px solid #e74c3c;
 }
