--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ a {
 }
 
 /* header */
-
 .header {
   background-color: #101010;
   position: fixed;
@@ -24,7 +23,6 @@ a {
   list-style: none;
   overflow: hidden;
   background-color: #101010;
-  /*margin-top: 20px;*/
 }
 
 .header li a {
@@ -32,13 +30,15 @@ a {
   padding: 10px 10px;
   border-right: 1px solid #101010;
   text-decoration: none;
+  user-select: none;
 }
 
 .header li:hover {
   background-color: #333;
 }
 
-.menu li:nth-child(6):hover, .menu li:nth-child(2):hover, .menu li:nth-child(3):hover {
+.line:nth-child(1) li:nth-child(2):hover,
+.line:nth-child(1) li:nth-child(3):hover {
   background-color: #101010;
 }
 
@@ -51,11 +51,11 @@ a {
 }
 
 /* menu */
-
 .header .menu {
   clear: both;
   max-height: 0;
   transition: max-height .2s ease-out;
+  max-width: 1024px;
 }
 
 .accordion {
@@ -99,19 +99,7 @@ a {
   transition: max-height 0.2s ease-out;
 }
 
-.line {
-
-}
-
-/*
-.protected {
-  margin-top:50px;
-  position: absolute;
-  top:10px;
-}*/
-
 /* menu icon */
-
 .header .menu-icon {
   cursor: pointer;
   display: inline-block;
@@ -150,7 +138,6 @@ a {
 }
 
 /* menu btn */
-
 .header .menu-btn {
   display: none;
 }
@@ -176,12 +163,12 @@ a {
   top: 0;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1335px) {
   .header li {
     float: left;
   }
   .header li a {
-    padding: 20px 30px;
+    padding: 20px 20px;
   }
   .header .menu {
     clear: none;
@@ -205,108 +192,113 @@ a {
 }
 
 .container {
+  margin-top: -15px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
 .box-minmax{
-margin-top: 30px;
+margin-top: 5px;
 width: 200px;
 display: flex;
 justify-content: space-between;
-font-size: 20px;
-color: #FFFFFF;
-span:first-child{
-  margin-left: 10px;
+font-size: 15px;
+color: #ddd;
+  span:first-child{
+    margin-left: 10px;
+  }
 }
-}
-.range-slider {
-}
+
 .rs-range {
-  margin-top: 29px;
+  background: transparent;
+  margin-top: 10px;
   width: 200px;
   -webkit-appearance: none;
 }
-.rs-range:focus {
-      outline: none;
-  }
-.rs-range::-webkit-slider-runnable-track {
-      width: 100%;
-      height: 1px;
-      cursor: pointer;
-      box-shadow: none;
-      background: #ffffff;
-      border-radius: 0px;
-      border: 0px solid #010101;
-  }
-.rs-range::-moz-range-track {
-      width: 100%;
-      height: 1px;
-      cursor: pointer;
-      box-shadow: none;
-      background: #ffffff;
-      border-radius: 0px;
-      border: 0px solid #010101;
-  }
 
- .rs-range::-webkit-slider-thumb {
-      box-shadow: none;
-      border: 0px solid #ffffff;
-      box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
-      height: 42px;
-      width: 22px;
-      border-radius: 22px;
-      background: rgba(255,255,255,1);
-      cursor: pointer;
-      -webkit-appearance: none;
-      margin-top: -20px;
-  }
-.rs-range::-moz-range-thumb{
-      box-shadow: none;
-      border: 0px solid #ffffff;
-      box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
-      height: 42px;
-      width: 22px;
-      border-radius: 22px;
-      background: rgba(255,255,255,1);
-      cursor: pointer;
-      -webkit-appearance: none;
-      margin-top: -20px;
+.rs-range:focus {
+  outline: none;
 }
+
+.rs-range::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 1px;
+  cursor: pointer;
+  box-shadow: none;
+  background: #ddd;
+  border-radius: 0px;
+  border: 0px solid #010101;
+}
+
+.rs-range::-moz-range-track {
+  width: 100%;
+  height: 1px;
+  cursor: pointer;
+  box-shadow: none;
+  background: #ddd;
+  border-radius: 0px;
+  border: 0px solid #010101;
+}
+
+.rs-range::-webkit-slider-thumb {
+  box-shadow: none;
+  border: 0px solid #ddd;
+  box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
+  height: 21px;
+  width: 11px;
+  border-radius: 22px;
+  background: #e74c3c;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -10px;
+}
+.rs-range::-moz-range-thumb{
+  box-shadow: none;
+  border: 0px solid #ddd;
+  box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
+  height: 21px;
+  width: 11px;
+  border-radius: 22px;
+  background: #e74c3c;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -10px;
+}
+
 .rs-range::-moz-focus-outer {
   border: 0;
-  }
+}
 
 .rs-label {
-  
   position: relative;
   transform-origin: center center;
   display: block;
-  width: 98px;
-  height: 98px;
+  width: 45px;
+  height: 45px;
   background: transparent;
   border-radius: 50%;
   line-height: 30px;
   text-align: center;
   font-weight: bold;
-  padding-top: 22px;
+  padding-top: 10px;
   box-sizing: border-box;
-  border: 2px solid #fff;
-  margin-top: 20px;
-  margin-left: -38px;
+  border: 2px solid #e74c3c;
+  margin-left: -14.5px;
   left: attr(value);
-  color: #fff;
+  color: #ddd;
   font-style: normal;
   font-weight: normal;
   line-height: normal;
-  font-size: 36px;
-  &::after {
-      content: "kg";
-      display: block;
-      font-size: 20px;
-      letter-spacing: 0.07em;
-      margin-top: -2px;
-  }
-  
+  font-size: 16px;
+}
+
+#rs-bullet2 {
+  margin-left: -22px;
+}
+
+.box-minmax span:nth-child(2) {
+  color: #e74c3c;
+  vertical-align: middle;
 }
