--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,47 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 body {
   margin: 0;
   font-family: 'Dosis', Helvetica, sans-serif;
@@ -30,7 +74,10 @@ a {
   padding: 10px 10px;
   border-right: 1px solid #101010;
   text-decoration: none;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .header li:hover {
@@ -54,6 +101,8 @@ a {
 .header .menu {
   clear: both;
   max-height: 0;
+  -webkit-transition: max-height .2s ease-out;
+  -o-transition: max-height .2s ease-out;
   transition: max-height .2s ease-out;
   max-width: 1024px;
 }
@@ -67,6 +116,8 @@ a {
   text-align: right;
   border: none;
   outline: none;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
   transition: 0.4s;
   display: inline-block;
   clear: both;
@@ -96,6 +147,8 @@ a {
   background-color: 101010;
   max-height: 0;
   overflow: hidden;
+  -webkit-transition: max-height 0.2s ease-out;
+  -o-transition: max-height 0.2s ease-out;
   transition: max-height 0.2s ease-out;
 }
 
@@ -106,7 +159,10 @@ a {
   float: right;
   padding: 28px 20px;
   position: relative;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .header .menu-icon .navicon {
@@ -114,6 +170,8 @@ a {
   display: block;
   height: 2px;
   position: relative;
+  -webkit-transition: background .2s ease-out;
+  -o-transition: background .2s ease-out;
   transition: background .2s ease-out;
   width: 18px;
 }
@@ -125,6 +183,8 @@ a {
   display: block;
   height: 100%;
   position: absolute;
+  -webkit-transition: all .2s ease-out;
+  -o-transition: all .2s ease-out;
   transition: all .2s ease-out;
   width: 100%;
 }
@@ -151,11 +211,15 @@ a {
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon:before {
-  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon:after {
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
@@ -193,17 +257,30 @@ a {
 
 .container {
   margin-top: -15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .box-minmax{
 margin-top: 5px;
 width: 200px;
+display: -webkit-box;
+display: -ms-flexbox;
 display: flex;
-justify-content: space-between;
+-webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
 font-size: 15px;
 color: #ddd;
   span:first-child{
@@ -226,7 +303,8 @@ color: #ddd;
   width: 100%;
   height: 1px;
   cursor: pointer;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   background: #ddd;
   border-radius: 0px;
   border: 0px solid #010101;
@@ -243,9 +321,11 @@ color: #ddd;
 }
 
 .rs-range::-webkit-slider-thumb {
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   border: 0px solid #ddd;
-  box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
+  -webkit-box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
+          box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
   height: 21px;
   width: 11px;
   border-radius: 22px;
@@ -273,7 +353,9 @@ color: #ddd;
 
 .rs-label {
   position: relative;
-  transform-origin: center center;
+  -webkit-transform-origin: center center;
+      -ms-transform-origin: center center;
+          transform-origin: center center;
   display: block;
   width: 45px;
   height: 45px;
@@ -283,7 +365,8 @@ color: #ddd;
   text-align: center;
   font-weight: bold;
   padding-top: 10px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border: 2px solid #e74c3c;
   margin-left: -14.5px;
   left: attr(value);
